--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+::-webkit-scrollbar {
+  width: 0.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+::-webkit-scrollbar-track {
+  background-color: rgb(255, 241, 241);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background: rgb(69, 68, 68);
+}
+
+@media only screen and (orientation: landscape) and (max-width: 880px) and (max-height: 480px) {
+  #turn {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #turn > img {
+    height: 60px;
+    width: 60px;
+  }
+  #container {
+    display: none;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (orientation: portrait) {
+  #turn {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  #container {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (min-height: 720px) {
+  #turn {
+    display: none;
+  }
+  #container {
+    display: block;
   }
 }
