--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   background: rgb(69, 68, 68);
 }
 
-@media only screen and (orientation: landscape) and (max-width: 880px) and (max-height: 480px) {
+/* @media only screen and (orientation: landscape) and (max-width: 880px) and (max-height: 480px) {
   #turn {
     height: 100vh;
     width: 100%;
@@ -55,4 +55,4 @@
   #container {
     display: block;
   }
-}
+} */
